force-app/main/default/objects/Knowledge__kav/fields/long_summary__c.field-meta.xml
<CustomField>
    <fullName>long_summary__c</fullName>
    <label>long summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>