force-app/main/default/objects/Knowledge__kav/fields/origin_url__c.field-meta.xml
<CustomField>
    <fullName>origin_url__c</fullName>
    <label>origin url</label>
    <type>Url</type>
</CustomField>