force-app/main/default/objects/Knowledge__kav/fields/topic__c.field-meta.xml
<CustomField>
    <fullName>topic__c</fullName>
    <label>topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>